--- a/info/templates/info/admin_page.html
+++ b/info/templates/info/admin_page.html
@@ -10,7 +10,8 @@
 
     <title>homepage</title>
       {% load static %}
-
+      {% comment %} {% load static %} {% endcomment %}
+      
     <!-- Bootstrap core CSS -->
       <link href="{% static '/info/homepage/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
